fixed my text align at my event page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,9 +319,11 @@ table {
 
 .prepare {
     text-align: center;
-    font-size: xx-large;
+    font-size: x-large;
     color: darkred;
     background-color: rgba(0,0,0,0.50);
+    padding: 50px;
+    
 }
 
 .drinks {
@@ -331,5 +333,6 @@ table {
 .gify {
     text-align: center;
     background-color: rgba(0,0,0,0.50);
+    
     
 }
